# spalah

./: .flake8  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CNAME  LICENSE  Makefile  README.md  delta.ipynb  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  tox.ini  usage.ipynb
.github/: ISSUE_TEMPLATE.md
.github/workflows/: semantic_release.yaml  spalah_ci.yaml  spalah_docs.yaml
docs/: examples.md  examples_dataframe.md  examples_datalake.md  index.md  reference_dataframe.md  reference_datalake.md  reference_dataset.md  usage copy.ipynb  usage.ipynb
docs/examples/: dataset.md
docs/reference/dataset/: DeltaProperty.md  DeltaTableConfig.md  dbfs.md
examples/dataframe/: index.html
examples/dataset/: index.html
reference/dataframe/: index.html
reference/dataset/DeltaTableConfig/: index.html
reference/dataset/dbfs/: index.html
search/: search_index.json
spalah/: __init__.py  dataframe.py  datalake.py
spalah/dataframe/: __init__.py  dataframe.py
spalah/dataset/: DeltaProperty.py  DeltaTableConfig.py  __init__.py  dbfs.py
spalah/shared/: logging.py
tests/: __init__.py  conftest.py  test_SchemaComparer.py  test_dataframe_script_dataframe.py  test_dataframe_slice_dataframe.py  test_datalake_DeltaProperty.py  test_datalake_DeltaTableConfig.py  test_datalake_get_table_properties.py  test_datalake_set_table_properties.py  test_flatten_schema.py  test_spalah_dataframe.py  test_spalah_dataframe_slice_dataframe.py  test_spalah_flatten_schema.py
